使用 Eclipse JDT 来分析一个 Java 类的直接依赖关系